dev edge-layer&&admin page
